--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navlinks">
         <div class="logo">
-            <img src="/python logo.png"
+            <img src="{% static 'img/logo.png' %}"
                 alt="">
             <h2>logo</h2>
         </div>
@@ -22,7 +22,6 @@
             <a href="">Home</a><a href="">Contact</a><a href="">About us</a>
         </div>
         <div class="btns">
-            <a href="dashboard" style="text-decoration:none;"><button type="button" class="btn btn-primary">Dashboard</button></a>
             <a href="profile" style="text-decoration:none;"><button type="button" class="btn btn-primary">Profile</button></a>
         </div>
     </nav>
