--- a/templates/home.html
+++ b/templates/home.html
@@ -32,25 +32,29 @@
             </div>
         </nav>
         <div class="boxer" id="rbtn">
-            <a href="p_details"><button type="button" class="btn btn-info">Regiester as Student</button></a><br>
-            <a href="i_details"><button type="button" class="btn btn-info">Regiester as Institute</button></a>
+            <a href="p_details"><button type="button" class="btn btn-info" style="margin: 0 6px 6px 0;">Regiester as Student</button></a><br>
+            <a href="i_details"><button type="button" class="btn btn-info" style="margin: 0 6px 6px 0;">Regiester as Institute</button></a>
         </div>
         <div class="boxer" id="lbtn">
-            <a href="login"><button type="button" class="btn btn-info">Login as Student</button></a><br>
-            <a href="i_login"><button type="button" class="btn btn-info">Login as Institute</button></a>
+            <a href="login"><button type="button" class="btn btn-info" style="margin: 0 16px 6px 0;">Login as Student</button></a><br>
+            <a href="i_login"><button type="button" class="btn btn-info" style="margin: 0 16px 6px 0;">Login as Institute</button></a>
         </div>
         <div class="para">
             <p>This website acts as a link between the financially weak students who cannot afford to get coaching for
                 various competitive examinations.</p>
-            <button type="button" class="btn btn-warning">Register now
+            <button type="button" class="btn btn-warning" onclick="clicking_log()">Register now
             </button>
         </div>
     </div>
     <div class="secdiv">
         <div class="utube">
             <h2>What we do?</h2>
-            <iframe width="450" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
-            </iframe>
+            <div class="lap">
+                <div class="vid">
+                    <iframe width="450" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+                    </iframe>
+                </div>
+            </div> 
         </div>
         <div class="notice">
             <h2>
