--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -11,7 +11,7 @@ body{
     flex-direction: row;
     justify-content: space-between;
     margin: 8px;
-    position: fixed;
+    /* position: fixed; */
     width: 100vw;
     
 }
@@ -24,6 +24,7 @@ body{
 .logo img {
     padding-right: 10px;
     width: 60px;
+    border-radius: 100px;
 }
 
 .nav {
@@ -158,35 +159,42 @@ nav a:hover{
 /* admin pro css*/
 
 .adm{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    /* width: 100vw; */
+    /* display: flex; */
 }
 .admcard{
-    width: 400px;
-    height: 600px;
+    display: flex;
+    /* width: 90vw; */
+    /* height: 600px; */
+    /* flex-direction: column; */
     background-color: white;
-    margin: 10px;
+    margin: 40px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 8px;
     transition: all 0.2s ease-in-out;
+    text-decoration: none;
+    color: rgb(37, 37, 37);
+    
 }
 .admcard:hover{
     scale: 1.01;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 19px 38px, rgba(0, 0, 0, 0.2) 0px 15px 12px;
 }
 .admcard img{
-    width: 100%;
+    /* width: 100%; */
+    padding: 10px;
+    width: 25vw;
+    border-radius: 20px;
+
     /* height: 50%; */
     /* background-color: rgb(211, 160, 255); */
 }
 .admcard h3{
-    text-align: center;
+    /* text-align: center; */
+    padding: 10px;
+    
 }
 .admcard p{
-    text-align: center;
+    /* text-align: center; */
     padding: 10px;
 }
