--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -12,8 +12,7 @@ body{
     justify-content: space-between;
     margin: 8px;
     position: fixed;
-    width: 100vw;
-    
+    width: 99vw;
 }
 
 .logo {
@@ -24,6 +23,7 @@ body{
 .logo img {
     padding-right: 10px;
     width: 60px;
+    border-radius: 30px;
 }
 
 .nav {
@@ -41,6 +41,8 @@ body{
     border-radius: 99px;
     font-size: 1.2rem;
     transition: 0.3s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
 }
 nav a:hover{
     scale: 1.05;
@@ -71,11 +73,11 @@ nav a:hover{
     /* padding: 12px; */
     position: absolute;
     top: 20vh;
-    left: 5vw;
+    left: 3vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    overflow: hidden;
 }
 
 .about {
