adding next step

--- a/templates/home.html
+++ b/templates/home.html
@@ -55,6 +55,8 @@
                     </iframe>
                 </div>
             </div> 
+            {% comment %} <div class="sha">
+            </div> {% endcomment %}
         </div>
         <div class="notice">
             <h2>
