--- a/templates/institute.html
+++ b/templates/institute.html
@@ -20,9 +20,9 @@
         <img src="../dashbord/python logo.png" alt="" />
         <h2>logo</h2>
       </div>
-      <div class="nav">
-        <a href="">Home</a><a href="">Contact</a><a href="">About us</a>
-      </div>
+      <div class="btns">
+        <a href="a_home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Back to Home</button></a>
+    </div>
     </nav>
     <div class="al_cards">
     {% for n in student %}
