--- a/templates/student.html
+++ b/templates/student.html
@@ -21,12 +21,9 @@
           <img src="{% static 'img/logo.png'%}" alt="" />
           <h2>logo</h2>
         </div>
-        <div class="nav">
-          <a href="">Home</a><a href="">Contact</a><a href="">About us</a>
-        </div>
-        <a href="dashboard" style="text-decoration: none"
-          ><button type="button" class="btn btn-primary">Dashboard</button></a
-        >
+        <div class="btns">
+          <a href="a_home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Back to Home</button></a>
+      </div>
       
     </nav>
     <div class="al_cards">
