--- a/templates/marks.html
+++ b/templates/marks.html
@@ -42,13 +42,8 @@
                 alt="">
             <h2>logo</h2>
         </div>
-        <div class="nav">
-            <a href="home">Home</a><a href="">Contact</a><a href="">About us</a>
-        </div>
         <div class="btns">
-            <a href="dashboard" style="text-decoration:none;"><button type="button" class="btn btn-primary">Dashboard</button></a>
-            <a href="profile" style="text-decoration:none;"><button type="button" class="btn btn-primary">Profile</button></a>
-            {% comment %} <button type="button" class="btn btn-outline-warning">Warning</button> {% endcomment %}
+            <a href="a_home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Back to Home</button></a>
         </div>
     </nav>
     <form method="post" action="marks">
