--- a/templates/adm_pro.html
+++ b/templates/adm_pro.html
@@ -21,8 +21,7 @@
         <h2>logo</h2>
       </div>
       <div class="btns">
-        <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-outline-warning">Warning</button>
+        <a href="a_logout" style="text-decoration:none; padding-right: 40px;"><button type="button" class="btn btn-primary">Logout</button></a>
       </div>
     </nav>
     <div class="adm">
