--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
         <div class="para">
             <p>This website acts as a link between the financially weak students who cannot afford to get coaching for
                 various competitive examinations.</p>
-            <button type="button" class="btn btn-warning" onclick="clicking_log()">Register now
+            <button type="button" class="btn btn-warning" onclick="clicking_reg()">Register now
             </button>
         </div>
     </div>
