--- a/templates/profilepg.html
+++ b/templates/profilepg.html
@@ -20,6 +20,7 @@
         </div>
         <div class="btns">
             <a href="dashboard" style="text-decoration:none;"><button type="button" class="btn btn-primary">Dashboard</button></a>
+            <a href="logout" style="text-decoration:none;"><button type="button" class="btn btn-primary">Logout</button></a>
             {% comment %} <button type="button" class="btn btn-outline-warning">Warning</button> {% endcomment %}
         </div>
     </nav>
