--- a/templates/home.html
+++ b/templates/home.html
@@ -26,10 +26,16 @@
             <div class="nav">
                 <a href="">Home</a><a href="">Contact</a><a href="">About us</a>
             </div>
+            {% if login %}
             <div class="btns">
-                <button type="button" class="btn btn-primary" onclick="clicking_log()">Sign In</button>
-                <button type="button" class="btn btn-outline-warning reg" onclick="clicking_reg()">Regiester</button>
+                <a href="profile"><button type="button" class="btn btn-info" style="margin: 0 6px 6px 0;">Profile</button></a><br>
             </div>
+            {% else %}
+                <div class="btns">
+                    <button type="button" class="btn btn-primary" onclick="clicking_log()">Sign In</button>
+                    <button type="button" class="btn btn-outline-warning reg" onclick="clicking_reg()">Regiester</button>
+                </div>
+            {% endif %}
         </nav>
         <div class="boxer" id="rbtn">
             <a href="p_details"><button type="button" class="btn btn-info" style="margin: 0 6px 6px 0;">Regiester as Student</button></a><br>
