--- a/static/css/adm.css
+++ b/static/css/adm.css
@@ -23,7 +23,9 @@ body{
 
 .logo img {
     padding-right: 10px;
-    width: 60px;
+    width: 4rem;
+    height: 4rem;
+    /* margin: 0; */
 }
 
 .nav {
