--- a/static/css/homecss.css
+++ b/static/css/homecss.css
@@ -22,7 +22,8 @@ body{
 
 .logo img {
     padding-right: 10px;
-    width: 60px;
+    width: 4rem;
+    height: 4rem;
     /* margin: 0; */
 }
 
@@ -48,7 +49,7 @@ body{
 nav a:hover{
     scale: 1.05;
     font-weight: 400;
-    background-color: #ffb451;
+    background-color: #dfdfdf;
     box-shadow: 3px 3px 10px rgba(36, 35, 35, 0.25);
 }
 
@@ -63,23 +64,22 @@ nav a:hover{
 }
 
 .homeimage {
-    position: absolute;
+    position: sticky ;
     width: 100vw;
     z-index: -1;
 }
 
 .para {
-    position: absolute;
-    width: 361px;
-    height: 105px;
-    left: 753px;
-    top: 304px;
+    padding: 20px;
     font-style: normal;
     font-weight: 200;
-    font-size: 21px;
+    font-size: 1.3rem;
     line-height: 180%;
-    width: 43vw;
+    width: 47vw;
+    flex-direction: column;
+    align-items: flex-start;
 }
+
 
 .secdiv {
     display: flex;
