--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -67,9 +67,9 @@
                         <span class="ques">link5</span>
                     </div>
                     <div class="answers">
+                        <span class="ans"><a href="exam" style="text-decoration:none;"><button>Give Test</button></a></span>
                         <span class="ans">{{link}}</span>
-                        <span class="ans">{{link}}</span>
-                        <span class="ans"><a href="council" style="text-decoration;">Councilling</a></span>
+                        <span class="ans"><a href="council" style="text-decoration:none;"><button>Councilling</button></a></span>
                         <span class="ans">{{link}}</span>
                         <span class="ans">{{link}}</span>
                         <span class="ans">{{link}}</span>
