--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="heropg">
-        <img class="homeimage" src="{% static 'img/Group 1.jpg' %}" alt="">
+        {% comment %} <img class="homeimage" src="{% static 'img/Group 1.jpg' %}" alt=""> {% endcomment %}
         <nav class="navlinks">
             <div class="logo">
                 <img src="{% static 'img/logo.png' %}"
@@ -118,9 +118,26 @@
             </div>
             <img src="{% static 'img/3.png' %}" alt="">
         </div>
-        <div class="footer">
-            <center>© 2022 - All Rights Reserved</center>
-        </div>
+        <footer >
+            <div class="row justify-content-center mb-0 pt-5 pb-0 row-2 px-3">
+                <div class="col-12">
+                     <div class="row row-2">
+                         <div class="col-sm-3 text-md-center"><h5><span> <i class="fa fa-firefox text-light" aria-hidden="true"></i></span><b>  UDAAN</b></h5></div>
+                         <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Platform</li><li>Help Center</li><li>Security</li></ul></div>
+                         <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Customers</li><li>Use Cases</li><li>Customers Services</li></ul></div>
+                         <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Company</li><li>About</li><li>Careers- <span class="Careers">We're-hiring</span></li></ul></div>
+                     </div>  
+                </div>
+            </div>
+            <div class="row justify-content-center mt-0 pt-0 row-1 mb-0  px-sm-3 px-2">
+                 <div class="col-12">
+                     <div class="row my-4 row-1 no-gutters">
+                         <div class="col-sm-3 col-auto text-center"><small>&#9400; UDAAN Softwere</small></div><div class="col-md-3 col-auto "></div><div class="col-md-3 col-auto"></div>
+                         <div class="col  my-auto text-md-left  text-right "> <small> UDAAN@getstride.com <span><img src="https://i.imgur.com/TtB6MDc.png" class="img-fluid "  width="25"></span> <span><img src="https://i.imgur.com/N90KDYM.png" class="img-fluid "  width="25"></span></small>  </div> 
+                     </div>
+                 </div>
+             </div>
+         </footer>
     </div>
 <script>
     function clicking_reg(){
