--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,8 @@
             <h2>What we do?</h2>
             <div class="lap">
                 <div class="vid">
-                    <iframe width="450" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
+                    {% comment %} https://www.youtube.com/embed/_2vWbfOOjjY?controls=1 {% endcomment %}
+                    <iframe width="450" height="345" src="https://www.youtube.com/embed/_2vWbfOOjjY?controls=1 ">
                     </iframe>
                 </div>
             </div> 
