--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -10,9 +10,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 8px;
-    /* position: fixed; */
-    width: 100vw;
+    padding: 12px;
     
 }
 
@@ -22,9 +20,10 @@ body{
 }
 
 .logo img {
-    padding-right: 10px;
-    width: 4rem;
-    height: 4rem;
+    /* padding: 10px; */
+    width: 50px;
+    height: 50px;
+    margin: 0 10px 0 0;
     /* margin: 0; */
 }
 
