--- a/static/css/homecss.css
+++ b/static/css/homecss.css
@@ -54,7 +54,9 @@ nav a:hover{
     background-color: #dfdfdf;
     box-shadow: 3px 3px 10px rgba(36, 35, 35, 0.25);
 }
-
+nav h2{
+    padding-top: 9px;
+}
 .heropg {
     background-image: url(../img/Group1.jpg);
     height: 70vh;
@@ -73,15 +75,16 @@ nav a:hover{
 }
 
 .para {
-    position: absolute;
-    right: 20px;
-    top: 34vh;
+    /* position: absolute; */
+    /* right: 20px;
+    top: 34vh; */
     padding: 20px;
     font-style: normal;
     font-weight: 200;
     font-size: 1.3rem;
     line-height: 180%;
     width: 47vw;
+    margin: 10vh 0 0 5vh;
     /* flex-direction: column; */
     /* align-items: flex-end; */
 }
