--- a/static/css/notice.css
+++ b/static/css/notice.css
@@ -16,20 +16,25 @@ nav{
     padding: 10px;
 }
 
+.navlinks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 12px;
+    
+}
+
 .logo {
     display: flex;
     flex-direction: row;
 }
 
 .logo img {
-    padding-right: 10px;
-    width: 4rem;
-    height: 4rem;
+    /* padding: 10px; */
+    width: 50px;
+    height: 50px;
+    margin: 0 10px 0 0;
     /* margin: 0; */
-}
-.navlinks{
-    list-style-type: none;
-    display: flex;
 }
 .navlinks li{
     padding: 10px 20px;
