--- a/static/css/prem.css
+++ b/static/css/prem.css
@@ -6,7 +6,47 @@
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
+.logo {
+  display: flex;
+  flex-direction: row;
+}
 
+.logo img {
+  /* padding: 10px; */
+  width: 50px;
+  height: 50px;
+  margin: 0 10px 0 0;
+  /* margin: 0; */
+}
+
+.nav {
+  width: 25vw;
+  justify-content: space-between;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #000;
+  width: auto;
+  height: 40px;
+  font-weight: 300;
+  padding: 6px 16px;
+  /* border-bottom: 2px solid #656565; */
+  /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 99px;
+  font-size: 1.2rem;
+  transition: 0.3s ease-in-out;
+}
+nav a:hover{
+  scale: 1.05;
+  font-weight: 400;
+  background-color: #dfdfdf;
+  box-shadow: 3px 3px 10px rgba(36, 35, 35, 0.25);
+}
+nav h2{
+  padding-top: 9px;
+}
 *,
 ::before,
 ::after {
