--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -22,8 +22,8 @@ body{
 
 .logo img {
     padding-right: 10px;
-    width: 4rem;
-    height: 4rem;
+    width: 50px;
+    height: 50px;
     /* margin: 0; */
 }
 
