--- a/templates/i_login.html
+++ b/templates/i_login.html
@@ -12,7 +12,14 @@
     <title>sign in </title>
   </head>
   <body >
-
+    <nav>
+      <div class="logo">
+          <img src="{% static 'img/logo.png' %}"
+          alt="">
+          <h2>UDAAN</h2>
+      </div>
+      <a href="home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Home</button></a>
+  </nav>
    <div class="wrapper fadeInDown">
         <div id="formContent">
           <!-- Tabs Titles -->
