--- a/templates/institutedetails.html
+++ b/templates/institutedetails.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Institute details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/prem.css' %}">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">logo</div>
-        <div class="login">Login</div>
+    <nav>
+        <div class="logo">
+            <img src="{% static 'img/logo.png' %}"
+            alt="">
+            <h2>UDAAN</h2>
+        </div>
+        <a href="home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Home</button></a>
     </nav>
     <main class="flex flex-col justify-evenly items-center h-full">
         <ul class="steps">
