--- a/templates/uploadinstitutedoc.html
+++ b/templates/uploadinstitutedoc.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="{% static 'css/prem.css' %}">
 </head>
 <body>
+    <nav>
+        <div class="logo">
+            <img src="{% static 'img/logo.png' %}"
+            alt="">
+            <h2>UDAAN</h2>
+        </div>
+        <a href="home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Home</button></a>
+    </nav>
     <main class="flex flex-col justify-evenly items-center h-full">
         <ul class="steps">
             <li class="step step-success">Institute Details</li>
