changed look of home page

--- a/static/css/prem.css
+++ b/static/css/prem.css
@@ -38,12 +38,12 @@
   font-size: 1.2rem;
   transition: 0.3s ease-in-out;
 }
-nav a:hover{
+/* nav a:hover{
   scale: 1.05;
   font-weight: 400;
   background-color: #dfdfdf;
   box-shadow: 3px 3px 10px rgba(36, 35, 35, 0.25);
-}
+} */
 nav h2{
   padding-top: 9px;
 }
