--- a/templates/student.html
+++ b/templates/student.html
@@ -15,15 +15,14 @@
   </head>
 
   <body>
-    <nav class="navlinks">
-      
+    <nav>
+      <a href="home" style="text-decoration: none">
         <div class="logo">
-          <img src="{% static 'img/logo.png'%}" alt="" />
-          <h2>logo</h2>
-        </div>
-        <div class="btns">
-          <a href="a_home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Back to Home</button></a>
-      </div>
+          <img src="{% static 'img/logo.png' %}" alt="" />
+          <!-- <h2>UDAAN</h2> -->
+        </div></a
+      >
+    </nav>
       
     </nav>
     <div class="al_cards">
