--- a/templates/i_login.html
+++ b/templates/i_login.html
@@ -13,13 +13,13 @@
   </head>
   <body >
     <nav>
-      <div class="logo">
-          <img src="{% static 'img/logo.png' %}"
-          alt="">
-          <h2>UDAAN</h2>
-      </div>
-      <a href="home" style="text-decoration:none;"><button type="button" class="btn btn-primary">Home</button></a>
-  </nav>
+      <a href="home" style="text-decoration: none">
+        <div class="logo">
+          <img src="{% static 'img/logo.png' %}" alt="" />
+          <!-- <h2>UDAAN</h2> -->
+        </div></a
+      >
+    </nav>
    <div class="wrapper fadeInDown">
         <div id="formContent">
           <!-- Tabs Titles -->
