--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
       <a href="home" style="text-decoration: none">
         <div class="logo">
           <img src="{% static 'img/logo.png' %}" alt="" />
-          <h2>UDAAN</h2>
+          <!-- <h2>UDAAN</h2> -->
         </div></a
       >
     </nav>
