--- a/templates/uploaddocument.html
+++ b/templates/uploaddocument.html
@@ -14,7 +14,7 @@
           <div class="logo">
             <img src="{% static 'img/logo.png' %}" alt="" />
             <!-- <h2>UDAAN</h2> -->
-          </div></a
+          </div></a>
         >
       </nav>
     <main class="flex flex-col justify-evenly items-center h-full">
